; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_kpi_interface.c_ifnet_set_interface_state.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_kpi_interface.c_ifnet_set_interface_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.if_interface_state = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@ENXIO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ifnet_set_interface_state(i32* %0, %struct.if_interface_state* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.if_interface_state*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store %struct.if_interface_state* %1, %struct.if_interface_state** %4, align 8
  store i32 0, i32* %5, align 4
  %6 = load i32*, i32** %3, align 8
  %7 = icmp eq i32* %6, null
  br i1 %7, label %11, label %8

8:                                                ; preds = %2
  %9 = load %struct.if_interface_state*, %struct.if_interface_state** %4, align 8
  %10 = icmp eq %struct.if_interface_state* %9, null
  br i1 %10, label %11, label %13

11:                                               ; preds = %8, %2
  %12 = load i32, i32* @EINVAL, align 4
  store i32 %12, i32* %5, align 4
  br label %23

13:                                               ; preds = %8
  %14 = load i32*, i32** %3, align 8
  %15 = call i32 @ifnet_is_attached(i32* %14, i32 0)
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %19, label %17

17:                                               ; preds = %13
  %18 = load i32, i32* @ENXIO, align 4
  store i32 %18, i32* %5, align 4
  br label %23

19:                                               ; preds = %13
  %20 = load i32*, i32** %3, align 8
  %21 = load %struct.if_interface_state*, %struct.if_interface_state** %4, align 8
  %22 = call i32 @if_state_update(i32* %20, %struct.if_interface_state* %21)
  br label %23

23:                                               ; preds = %19, %17, %11
  %24 = load i32, i32* %5, align 4
  ret i32 %24
}

declare dso_local i32 @ifnet_is_attached(i32*, i32) #1

declare dso_local i32 @if_state_update(i32*, %struct.if_interface_state*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
